--- a/Murn-27201103-2023.tex
+++ b/Murn-27201103-2023.tex
@@ -594,7 +594,7 @@ Zapišemo lahko naslednjo trditev:
 
 
 \begin{trditev}
-    Naj bo $K_{m_1, ..., m_t}$ $t$-delni polni graf, ki ima $r$ delov vsaj $2$ vozlišči in ostali 
+    Naj bo $K_{m_1, ..., m_t}$ $t$-delni polni graf, v katerem ima $r$ delov vsaj $2$ vozlišči in ostali 
     po eno vozlišče, ter naj velja $\sum_{i=1}^{t} m_i = m.$ Potem je
     $$\mu(K_{m_1, ..., m_t}) = \beta(K_{m_1, ..., m_t}) = 
     \begin{cases}
@@ -633,15 +633,15 @@ Zapišemo lahko naslednjo trditev:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{primer} 
-Za lažjo predstavo si lahko ogledamo sliko \ref{fig:produkt}, ki prikazuje leksikografski produkt
-dveh naključnih povzeanih grafov.
+\subsection{Primer} 
+Za lažjo predstavo si lahko ogledamo sliko \ref{fig:produkt}, ki prikazuje leksikografski 
+produkt dveh naključnih povezanih grafov.
 
 \begin{figure}[h]
-    \caption{Leksikografski produkt poljubnih povezanih grafov $G$ in $H$.}
     \centering
     \includegraphics[width=\textwidth]{IMG_produkt.jpg}   
-    \label{fig:produkt}   
+    \label{fig:produkt}
+    \caption{Leksikografski produkt povezanih grafov $G$ in $H$.}   
 \end{figure}
 
 
@@ -649,7 +649,7 @@ dveh naključnih povzeanih grafov.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{lastnosti} \label{ss:lastnosti_leks_prod}
+\subsection{Lastnosti} \label{ss:lastnosti_leks_prod}
 Nekaj osnovnih lastnosti leksikografskega produkta grafov:
 \begin{itemize}
     \item RED: $|V(G)| = n$ in $|V(H)| = m \; \Rightarrow |V(G[H])| = n \cdot m.$
@@ -665,10 +665,10 @@ Nekaj osnovnih lastnosti leksikografskega produkta grafov:
 
 \end{itemize}
 
-Poglejmo si kako izgleda razdalja med vozliščema v leksikografskem prodkutu grafov. 
+Poglejmo si, kako izgleda razdalja med vozliščema v leksikografskem produktu grafov. 
 Opazujemo leksikografski produkt povezanega grafa $G$ reda $n$, z množico vozlišč
 $V(G) = \{v_1, v_2, ... , v_n \}$ in grafa $H$ reda $m$, z množico vozlišč 
-$V(H) = \{u_1, u_2, ... , u_m \}$. Zaradi boljše preglednosti vpeljimo oznako 
+$V(H) = \{u_1, u_2, ... , u_m \}$. Vpeljimo oznako 
 $v_{ij} := (v_i, u_j) \in V(G[H]).$
 Sedaj lahko zapišemo
 \begin{equation} \label{eq:razdalja_produkta}
@@ -679,7 +679,7 @@ Sedaj lahko zapišemo
     \end{cases}
 \end{equation} 
 
-Tu je preslikava $a$ definirana v enačbi \ref{eq:fja_a}.
+Tu je preslikava $a$ definirana v \ref{eq:fja_a}.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -698,14 +698,14 @@ Tu je preslikava $a$ definirana v enačbi \ref{eq:fja_a}.
 \subsection{Metrična dimenzija leksikografskega produkta glede na metrično dimenzijo grafa $H$} \label{ss:mdim_komp_prod}
 
 %TA PODNASLOV NI NAJBOLJ POSREČEN...
-Obravnavamo leksikografski produkt $G[H]$, kjer je $G$ povezan graf in $H$ pojuben 
-graf. Naj bosta $a \in V(G)$ in $b \in H$ poljubni vozlišči. Za potrebe tega 
+V tem razdelku obravnavamo leksikografski produkt $G[H]$, kjer je $G$ povezan graf in $H$ 
+poljuben graf. Naj bosta $a \in V(G)$ in $b \in H$ poljubni vozlišči. Za potrebe tega 
 podpoglavlja vpeljimo naslednje oznake:
 \begin{itemize}
     \item $H(a) = \{ (a, v) \; | \; v \in V(H) \}$.
     \item $G(b) = \{ (v, b) \; | \; v \in V(G) \}$.
     \item Če so $H_1, H_2, ..., H_k$ komponente grafa $H$, označimo 
-    $H_i(a) = \{ (a, v) \; | \; v \in V(H_i) \}$
+    $H_i(a) = \{ (a, v) \; | \; v \in V(H_i) \}$.
 \end{itemize}
 
 Vzemimo sosednji vozlišči $a$, $b \in V(G)$. Vemo, da je vsako vozlišče iz $H(b)$ 
@@ -771,21 +771,21 @@ TODO - leme
     
     \begin{izrek} \label{izrek:primeri_mdim_komp}
     Obstajata taka grafa $G$ in $H$, da je $G$ povezan graf reda $n \geq 2$ in $H$ poljuben graf 
-    reda $m \geq 2$, s $k \geq 1$ komponentami $H_1, H_2, ... , H_k$, da velja:
+    reda $m \geq 2$, s $k \geq 1$ komponentami $H_1, H_2, \dots , H_k$, da velja:
     \begin{enumerate}
-        \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr )$
+        \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr )$.
         \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 
-         \Bigr ) + (n-2)$
+         \Bigr ) + (n-2)$.
         \item $\beta(G[H]) = n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1  
-        \Bigr )$
-        \item $\beta(G[H]) = n \cdot \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) $
+        \Bigr )$.
+        \item $\beta(G[H]) = n \cdot \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) $.
     \end{enumerate}
     \end{izrek}
     
     \begin{dokaz}
         \begin{enumerate}
-            \item Naj bo $G = P_n$, $n\geq 4$ in $H$ graf s $k\geq 2$ vozlišči, brez povezav. 
-            Zaradi izreka \ref{izrek:omejitve_mdim_komp}, je dovolj pokazati 
+            \item Naj bo $G = P_n$, $n\geq 4$ in $H = N_k$, $k\geq 2$. 
+            Zaradi izreka \ref{izrek:omejitve_mdim_komp} je dovolj pokazati 
             $\beta(G[H]) \leq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p) \Bigr )  - 1  \Bigr ) = n 
             \cdot (k - 1)$. Označimo $V(G) = \{p_1 , p_2, ..., p_n\}$, kjer so $\forall 1 \leq i < n : \; 
             p_i p_{i+1} \in E(G)$, in $V(H) = \{ v_1, v_2, ..., v_k\}.$ Definirajmo množico 
@@ -805,7 +805,7 @@ TODO - leme
             \item Naj bo $G = S_{n-1}$ zvezda na $n$ vozliščih, $n\geq 4$, in $H$ graf s $k \geq 2$ komponentami
             $H_1, H_2, ..., H_k,$ kjer je $H_i = P_8.$ Velja $\beta(P_8 + K_1) = 
             \Bigl \lfloor \frac{2\cdot 8 + 2}{5} \Bigr \rfloor = 3. $ % DOKAZ??
-            Zato je, podobno kot v prvi točki, pokazati  
+            Zato je, podobno kot v prvi točki, dovolj pokazati  
             $$\beta(G[H]) \geq n \cdot \Bigl ( \Bigl ( \sum_{p=1}^{k} \beta(H_p + K_1) \Bigr ) + k - 1 \Bigr ) + 
             (n-2) = 4kn - 2.$$ 
             Naj bo $B$ rešljiva baza $P_8 + K_1$, potem obstaja $v \in V(P_8),$ da je $r_B(v) = (2, 2, 2).$
@@ -875,7 +875,7 @@ podlagi reda grafa $G$ in sosedske dimenzije grafa $H$.
     Naj bo $G$ povezan graf reda $n$ in $H$ poljuben graf. Če obstajata dve sosedski bazi 
     grafa $H$, $S_1$ in $S_2$, da nobeno vozlišče nima sosedske predstavitve z množico $S_1$ 
     enako $\1$ in nobeno vozlišče nima sosedske predstavitve z množico $S_2$ 
-    enako $\2$, potem velja $$\beta(G[H]) = \beta(G[\overline{H}]) = n \cdot \mu(H) $$ 
+    enako $\2$, potem velja $$\beta(G[H]) = \beta(G[\overline{H}]) = n \cdot \mu(H) $$.
 \end{trditev}
 
 \begin{dokaz}
