--- a/Murn-27201103-2023.tex
+++ b/Murn-27201103-2023.tex
@@ -2,6 +2,8 @@
 \usepackage{amsmath}
 \usepackage{graphicx}
 \usepackage{hyperref}
+\usepackage[maxbibnames=99, articlein=false]{biblatex}
+\addbibresource{literatura.bib}
 % \documentclass[fin1, tisk]{fmfdelo}
 % Če pobrišete možnost tisk, bodo povezave obarvane,
 % na začetku pa ne bo praznih strani po naslovu, …
@@ -695,7 +697,8 @@ Tu je preslikava $a$ definirana v \ref{eq:fja_a}.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\subsection{Metrična dimenzija leksikografskega produkta glede na metrično dimenzijo grafa $H$} \label{ss:mdim_komp_prod}
+\subsection{Metrična dimenzija leksikografskega produkta glede na metrično 
+dimenzijo grafa $H$} \label{ss:mdim_komp_prod}
 
 %TA PODNASLOV NI NAJBOLJ POSREČEN...
 V tem razdelku obravnavamo leksikografski produkt $G[H]$, kjer je $G$ povezan graf in $H$ 
@@ -983,5 +986,6 @@ podlagi reda grafa $G$ in sosedske dimenzije grafa $H$.
 
 \section{Zaključek}
 % ...
+\printbibliography
 
 \end{document}
